[build-system]
requires = ["setuptools>=79,<81", "wheel~=0.45", "setuptools_scm[toml]~=8.3"]
build-backend = "setuptools.build_meta"

[project]
name = "ixbrl-viewer"
dynamic = ['version']
readme = "README.md"
license = "Apache-2.0"
description = "The Arelle iXBRL Viewer allows iXBRL reports to be viewed interactively in a web browser."
authors = [
    {name = "arelle.org", email = "support@arelle.org"}
]
keywords = ["arelle", "plugin", "xbrl"]
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: End Users/Desktop',
    'Intended Audience :: Developers',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Operating System :: OS Independent',
    'Topic :: Text Processing :: Markup :: XML'
]
requires-python = ">=3.9"
dependencies = [
    'lxml>=4,<7'
]
[project.optional-dependencies]
arelle = [
    'arelle_release==2.*',
]
dev = [
    'flake8==7.3.0',
    'lxml-stubs==0.5.1',
    'mypy==1.16.1',
    'pytest==8.4.1',
    'typing-extensions==4.14.1',
]

# https://setuptools.pypa.io/en/latest/userguide/entry_point.html#entry-points-for-plugins
[project.entry-points."arelle.plugin"]
ixbrl-viewer = "iXBRLViewerPlugin:load_plugin_url"

[project.urls]
"Homepage" = "https://arelle.org/"
"Downloads" = "https://arelle.org/arelle/pub/"
"Documentation" = "https://arelle.org/arelle/documentation/"
"Blog" = "https://arelle.org/arelle/blog/"
"Source Code" = "https://github.com/Arelle/ixbrl-viewer"
"Bug Reports" = "https://github.com/Arelle/ixbrl-viewer/issues/"
"Support" = "https://groups.google.com/g/arelle-users/"

[tool.setuptools]
platforms = ["any"]

[tool.setuptools.packages.find]
include = ["iXBRLViewerPlugin*"]

[tool.setuptools_scm]
tag_regex = "^(?:[\\w-]+-?)?(?P<version>[vV]?\\d+(?:\\.\\d+){0,2}[^\\+]*)(?:\\+.*)?$"
write_to = "iXBRLViewerPlugin/_version.py"

[tool.mypy]
# Warn when a # type: ignore comment does not specify any error codes
enable_error_code = "ignore-without-code"
python_version = "3.13"
show_error_codes = true
strict = true

# --- ignore modules ---
# remove from list below as each module is updated with type hinting
[[tool.mypy.overrides]]
module = [
    'iXBRLViewerPlugin',
    'iXBRLViewerPlugin.iXBRLViewer',
    'iXBRLViewerPlugin.ui',
    'iXBRLViewerPlugin.xhtmlserialize',
]
ignore_errors = true

# --- Modules lacking stubs ---
# Add any module missing library stubs or not having
# the py.typed marker here
[[tool.mypy.overrides]]
module = [
    'ttk',
    'arelle.*',
]
ignore_missing_imports = true
